kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: jekyll
  name: jekyll
spec:
  ports:
  - name: "4000"
    port: 4000
    targetPort: 4000
  selector:
    io.kompose.service: jekyll
