kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-sandrofelder-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - home.sandrofelder.ch
      secretName: home-sandrofelder-ch-tls
  rules:
  - host: home.sandrofelder.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: jekyll
          servicePort: 4000
